--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-# L200150123.github.io
+
 
 <!DOCTYPE html>
 <html>
@@ -11,6 +11,7 @@
 </style>
 </header>
   <body>
+   <h3>My Google Maps Demo to My Home</h3>
     <div id="map"></div>
     <script>
       function initMap() {
