--- a/rumahpuput.html
+++ b/rumahpuput.html
@@ -9,7 +9,7 @@
 </style>
 </header>
 <body>
-	<h3>RUMAH PUPUT</h3>
+	<h3>ARAH KE RUMAH SAYA</h3>
 	<div id="map"></div>
 
 	<script>
@@ -28,7 +28,7 @@
     </script>
 
  	<script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAboWAvSFyPdM47HCOJCJWTzuPOtmsivOY&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVzu6490b82LEA_AodJpZ-QBhEoSVWYAE&callback=initMap">
     </script>
 
 </body>
