--- a/gorontalo.html
+++ b/gorontalo.html
@@ -10,6 +10,12 @@
       #map {
         height: 100%;
       }
+      .header {
+          background-color: blue;
+          color: white;
+          text-align: left;
+          padding: 20px;
+          min-height: 23px;
       /* Optional: Makes the sample page fill the window. */
       html, body {
         height: 100%;
@@ -19,6 +25,8 @@
     </style>
   </head>
   <body>
+    <div class="header"><span><strong>PROVINSI 29 (GORONTALO)</strong></span></div>
+    <div class="header"><span><strong>Widiyarti Endang S. (L200150117) & Danindya Puput M. P. (L200150123)</strong></span></div>
     <div id="map"></div>
     <script>
 
