--- a/streetview.html
+++ b/streetview.html
@@ -30,14 +30,14 @@
       }
       // ngasih gambar pano ke map
       function getCustomPanoramaTileUrl(pano, zoom, tileX, tileY) {
-        return 'https://raw.githubusercontent.com/L200150123/L200150123.github.io/master/IMG-20180617.jpg';
+        return 'https://github.com/L200150123/L200150123.github.io/blob/master/Image%20streetview.jpeg';
       }
       function getCustomPanorama(pano, zoom, tileX, tileY) {
         if (pano === 'reception') {
           return {
             location: {
               pano: 'reception',
-              description: 'Karanganyar, Tarakan, Kalimantan Utara, vs: panorama'
+              description: 'Gedung J Lt. 4 FKI UMS'
             },
             links: [],
             copyright: 'Imagery (c) 2010 Google',
