--- a/streetview.html
+++ b/streetview.html
@@ -30,7 +30,7 @@
       }
       // ngasih gambar pano ke map
       function getCustomPanoramaTileUrl(pano, zoom, tileX, tileY) {
-        return 'https://github.com/L200150123/L200150123.github.io/blob/master/IMG_1976.jpg';
+        return 'https://raw.githubusercontent.com/L200150123/L200150123.github.io/master/IMG_1976.jpg';
       }
       function getCustomPanorama(pano, zoom, tileX, tileY) {
         if (pano === 'reception') {
